force-app/main/default/objects/Account/fields/Actively_Worked__c.field-meta.xml
<CustomField>
    <fullName>Actively_Worked__c</fullName>
    <description>Field on the Account to show if they have had activity in the last 45 days.</description>
    <formula>IF( TODAY () - LastActivityDate &lt;= 45, true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actively Worked</label>
    <type>Checkbox</type>
</CustomField>