force-app/main/default/objects/Account/fields/Associated_Deals__c.field-meta.xml
<CustomField>
    <fullName>Associated_Deals__c</fullName>
    <description>The number of deals associated with this company Created by CK Ext 221.</description>
    <label>Associated Deals</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>