force-app/main/default/objects/Account/fields/CS_Owner__c.field-meta.xml
<CustomField>
    <fullName>CS_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CS Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>