force-app/main/default/objects/Account/fields/CSM__c.field-meta.xml
<CustomField>
    <fullName>CSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>