force-app/main/default/objects/Account/fields/Definitive__c.field-meta.xml
<CustomField>
    <fullName>Definitive__c</fullName>
    <formula>TEXT( texcellency__DefHC_HospitalID__c )</formula>
    <label>Definitive</label>
    <type>Text</type>
</CustomField>