force-app/main/default/objects/Account/fields/Definitive_Hospital_Type__c.field-meta.xml
<CustomField>
    <fullName>Definitive_Hospital_Type__c</fullName>
    <description>Definitive Hospital Type. Created by CK Ext. 221</description>
    <label>Definitive Hospital Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>