force-app/main/default/objects/Account/fields/Definitive_IDN_ID__c.field-meta.xml
<CustomField>
    <fullName>Definitive_IDN_ID__c</fullName>
    <description>Definitive IDN ID. Created by CK Ext. 221</description>
    <label>Definitive IDN ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>