force-app/main/default/objects/Account/fields/Definitive_IDN_Parent_ID__c.field-meta.xml
<CustomField>
    <fullName>Definitive_IDN_Parent_ID__c</fullName>
    <label>Definitive IDN Parent ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>