force-app/main/default/objects/Account/fields/External_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Account_Id__c</fullName>
    <description>Holds the Id of the record migrated from Hubspot.</description>
    <externalId>true</externalId>
    <label>External Account Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>