force-app/main/default/objects/Account/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <description>Definitive fiscal year</description>
    <label>Fiscal Year</label>
    <type>TextArea</type>
</CustomField>