force-app/main/default/objects/Account/fields/GSID__c.field-meta.xml
<CustomField>
    <fullName>GSID__c</fullName>
    <label>GSID</label>
    <length>60</length>
    <type>Text</type>
</CustomField>