force-app/main/default/objects/Account/fields/Hospital_Type__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Type__c</fullName>
    <label>Hospital Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Health System</fullName>
            </value>
            <value>
                <fullName>Health System - Academic</fullName>
            </value>
            <value>
                <fullName>Childrens Hospital</fullName>
                <label>Children&apos;s Hospital</label>
            </value>
            <value>
                <fullName>FQHC</fullName>
                <label>Federally Qualified Health Center</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Private Group</fullName>
            </value>
            <value>
                <fullName>Critical Access Hospital</fullName>
                <isActive>false</isActive>
                <label>Critical Access Hospital</label>
            </value>
            <value>
                <fullName>Department of Defense Hospital</fullName>
                <isActive>false</isActive>
                <label>Department of Defense Hospital</label>
            </value>
            <value>
                <fullName>Long Term Acute Care Hospital</fullName>
                <isActive>false</isActive>
                <label>Long Term Acute Care Hospital</label>
            </value>
            <value>
                <fullName>Psychiatric Hospital</fullName>
                <isActive>false</isActive>
                <label>Psychiatric Hospital</label>
            </value>
            <value>
                <fullName>Rehabilitation Hospital</fullName>
                <isActive>false</isActive>
                <label>Rehabilitation Hospital</label>
            </value>
            <value>
                <fullName>Religious Non-Medical Health Care Institution</fullName>
                <isActive>false</isActive>
                <label>Religious Non-Medical Health Care Institution</label>
            </value>
            <value>
                <fullName>Short Term Acute Care Hospital</fullName>
                <isActive>false</isActive>
                <label>Short Term Acute Care Hospital</label>
            </value>
            <value>
                <fullName>VA Hospital</fullName>
                <isActive>false</isActive>
                <label>VA Hospital</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>