force-app/main/default/objects/Account/fields/ICP_Tier__c.field-meta.xml
<CustomField>
    <fullName>ICP_Tier__c</fullName>
    <description>ICP tier text field</description>
    <label>ICP Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>Tier 4</fullName>
            </value>
            <value>
                <fullName>Exploratory</fullName>
            </value>
            <value>
                <fullName>Outside-ICP</fullName>
            </value>
            <value>
                <fullName>FALSE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>