force-app/main/default/objects/Account/fields/Implementation_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Implementation Project Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>