force-app/main/default/objects/Account/fields/Net_Patient_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Net_Patient_Revenue__c</fullName>
    <description>Revenue from All Patients. Created by CK Ext 221.</description>
    <label>Net Patient Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>