force-app/main/default/objects/Account/fields/Netsuite_ID__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_ID__c</fullName>
    <label>Netsuite ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>