force-app/main/default/objects/Account/fields/Num_of_Affiliated_Physicians__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Affiliated_Physicians__c</fullName>
    <description>Number of affiliated Physicians. Created by CK Ext 221.</description>
    <label>Number of Providers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>