force-app/main/default/objects/Account/fields/Number_of_Associated_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Associated_Contacts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of contacts associated with this company. Created by CK Ext 221.</description>
    <label>Number of Associated Contacts</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>