force-app/main/default/objects/Account/fields/Opportunity_count__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_count__c</fullName>
    <label>Opportunity_count</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>