force-app/main/default/objects/Account/fields/Original_Source_Data_1__c.field-meta.xml
<CustomField>
    <fullName>Original_Source_Data_1__c</fullName>
    <description>Additional information about the original source for the contact with the earliest activity for this company or organization. Created by CK Ext 221.</description>
    <label>Original Source Data 1</label>
    <length>900</length>
    <type>LongTextArea</type>
</CustomField>