force-app/main/default/objects/Account/fields/Other_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Type__c</fullName>
    <description>If Hospital Type = other, this will be a required write in</description>
    <inlineHelpText>Hospital Type was indicated as &quot;Other&quot;, please describe how this prospect would identify their business. Examples: &quot;Home Care&quot; or &quot;Direct to Consumer&quot;</inlineHelpText>
    <label>Other Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Hospital_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct-to-Consumer</fullName>
            </value>
            <value>
                <fullName>Home Care</fullName>
            </value>
            <value>
                <fullName>Long Term Care Hospital</fullName>
            </value>
            <value>
                <fullName>Occupational Health</fullName>
            </value>
            <value>
                <fullName>Payer</fullName>
            </value>
            <value>
                <fullName>Urgent Care</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>