force-app/main/default/objects/Account/fields/Rank_Number__c.field-meta.xml
<CustomField>
    <fullName>Rank_Number__c</fullName>
    <description>ranked 1-xxxx by NPR amount</description>
    <label>Rank Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>