force-app/main/default/objects/Account/fields/Relationship_Map__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Map__c</fullName>
    <label>Relationship Map</label>
    <type>Url</type>
</CustomField>