force-app/main/default/objects/Account/fields/Salesforce_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Account_ID__c</fullName>
    <label>Salesforce Account ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>