force-app/main/default/objects/Account/fields/Target_Account__c.field-meta.xml
<CustomField>
    <fullName>Target_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The Target Account property identifies the companies that you are marketing and selling to as part of your account-based strategy. Created by CK Ext 221.</description>
    <label>Target Account</label>
    <type>Checkbox</type>
</CustomField>