force-app/main/default/objects/Account/fields/Telemedicine_App_del__c.field-meta.xml
<CustomField>
    <fullName>Telemedicine_App_del__c</fullName>
    <description>Telemedicine App Field. Created by CK Extn. 221</description>
    <label>Telemedicine App</label>
    <length>255</length>
    <type>Text</type>
</CustomField>