force-app/main/default/objects/Account/listViews/Children_s_Hospitals.listView-meta.xml
<ListView>
    <fullName>Children_s_Hospitals</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <columns>ACCOUNT.URL</columns>
    <columns>Definitive_Healthcare_Hospital_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>texcellency__DefHC_Hospital_Type__c</field>
        <operation>contains</operation>
        <value>child</value>
    </filters>
    <label>Children&apos;s Hospitals</label>
</ListView>