force-app/main/default/objects/Account/listViews/childrens_hospital_all.listView-meta.xml
<ListView>
    <fullName>childrens_hospital_all</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>texcellency__DefHC_Hospital_Name__c</columns>
    <columns>texcellency__DefHC_Network_Name__c</columns>
    <columns>Hospital_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Hospital_Type__c</field>
        <operation>equals</operation>
        <value>Childrens Hospital</value>
    </filters>
    <filters>
        <field>Key_Account__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>all childrens hospital all</label>
</ListView>