force-app/main/default/objects/Account/listViews/Mike_Territory.listView-meta.xml
<ListView>
    <fullName>Mike_Territory</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>texcellency__DefHC_HospitalID__c</columns>
    <columns>texcellency__DefHC_State__c</columns>
    <columns>texcellency__DefHC_NetPatientRev__c</columns>
    <columns>texcellency__DefHC_EMR_Vendor_Inpatient__c</columns>
    <columns>texcellency__DefHC_FirmType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>texcellency__DefHC_State__c</field>
        <operation>equals</operation>
        <value>AL,DC,DE,FL,GA,LA,MA,MD,MS,NC,NH,PR,SC,TN,VA,VT</value>
    </filters>
    <label>Mike&apos;s Territory</label>
</ListView>