force-app/main/default/objects/Account/listViews/Sam_s_Territory.listView-meta.xml
<ListView>
    <fullName>Sam_s_Territory</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>texcellency__DefHC_HospitalID__c</columns>
    <columns>texcellency__DefHC_State__c</columns>
    <columns>texcellency__DefHC_NetPatientRev__c</columns>
    <columns>texcellency__DefHC_EMR_Vendor_Inpatient__c</columns>
    <columns>texcellency__DefHC_FirmType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>texcellency__DefHC_State__c</field>
        <operation>equals</operation>
        <value>CT,IL,IN,KY,ME,MI,NJ,NY,OH,PA,RI,WV</value>
    </filters>
    <label>Sam&apos;s Territory</label>
</ListView>