force-app/main/default/objects/Account/listViews/Tier_2.listView-meta.xml
<ListView>
    <fullName>Tier_2</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>texcellency__DefHC_HospitalID__c</columns>
    <columns>texcellency__DefHC_NetPatientRev__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>texcellency__DefHC_EMR_Vendor_Inpatient__c</columns>
    <columns>texcellency__DefHC_FirmType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ICP_Tier__c</field>
        <operation>equals</operation>
        <value>Tier 2</value>
    </filters>
    <label>Tier 2</label>
</ListView>